--- a/notebook/new_dataset.ipynb
+++ b/notebook/new_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "18bf5250",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ca7c02ae",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e5c0cb9b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dc6c088e",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "4               7.49           13.06       False              3.2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "767fa0f0",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5e09fcd2",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "4               1.015449                  141  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d56673ea",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9b37111d",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d619d8bf",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
        "<Axes: ylabel='work_hours'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b598f9f6",
    "metadata": {},
    "outputs": [],
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c9a2a5ae",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "04421989",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "01f60566",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "84c734ee",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "4                  141  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "75e59082",
    "metadata": {},
    "outputs": [],
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "36a196c3",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "4840ec0b",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e89fadc5",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "b4ceb617",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "2da470f3",
    "metadata": {},
    "outputs": [],
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "3f2ed475",
    "metadata": {},
    "outputs": [],
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "771db84e",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "1ea2d7da",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
        "4                  141  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "a2e695cc",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
        "      dtype='str')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "1a522ff2",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "4                  141  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "77ded5ee",
    "metadata": {},
    "outputs": [],
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "00357766",
    "metadata": {},
    "outputs": [],
@@ -1507,6 +1507,40 @@
     "\n",
     "df.to_csv(file_path, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "292d2ac9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['day_type', 'work_hours', 'screen_time_hours', 'meetings_count',\n",
+       "       'breaks_taken', 'after_hours_work', 'app_switches', 'sleep_hours',\n",
+       "       'task_completion', 'isolation_index', 'fatigue_score', 'burnout_risk',\n",
+       "       'work_hours_7d_avg', 'fatigue_3d_sum', 'is_weekend', 'meetings_7d_avg',\n",
+       "       'effort_recovery_ratio', 'context_switch_load'],\n",
+       "      dtype='str')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "031c7740",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
